1 Jun 2011  wtford -- V01-01-15
Move SplitClustersProducer.cc to plugins.  Replace Buildfiles with .xml,
rewritten to support inheritance of SplitClustersAlgos by
detAnalysis/ClusterNtuplizer.  Add parameters to set the dE/dx
calibration, limit the layers to which splitting is applied.

22 May 2010  wtford -- V01-01-14
SplitClustersAlgos:  Add overload of straightPathLength to take cluster
as argument and account for the measured local x.  (This only changes
the path length by ~1%, and has to be called within the cluster loop, so
may not be that useful.)

19 May 2010  wtford -- V01-01-13
SplitClustersProducer:  Cosmetic changes only (consistent indentation).

19 May 2010  wtford -- V01-01-12
Updates for CMSSW_3_5_X.
SplitClustersAlgos:  Add functions iniVertex, iniZvertex,
straightPathLength to set up the primary vertex from pixels, calculate
the effective path length for a straight track from this vertex through
the center of the sensor (origin of its local coordinates).
SplitClustersProducer:  Add a "no split" option for testing.  Location
was changed for SiStripClusterInfo.  Load the beam spot and pixel
vertices from the event.  Calculate normalized cluster charge, either
from MC truth or assuming a straight track from the pixel primary
vertex.  Base decision to split a cluster on the normalized charge.

13 Jan 2010  wtford -- V01-01-11
SplitClustersProducer:  Use the associateSimpleRecHitCluster signature
that's in CMSSW_3_4_X, so we won't need to check out the later version,
since the additional argument is no longer needed. 

25 Nov 2009  wtford -- V01-01-10
SplitClustersProducer:  Back out "Replace calls to hitAssociator with
inline code (should be faster)."  We now have reverted to V01-01-08 but
with function dumpDigiSimLinks.

20 Nov 2009  wtford -- V01-01-09
SplitClustersProducer:  Cosmetic changes only (consistent indentation);
printOut -> false.

20 Nov 2009  wtford
SplitClustersProducer:  Add a function to dump information to a flat